[tool.poetry]
name = "dztools"
version = "1.0.0"
description = "Useful tools for dz"
authors = [
    "Daniel Zhang <daniel.t.zhang@ntnu.no>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
typer = "^0.19"

[tool.poetry.scripts]
dz = "dztools.bin:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"
black = "^23.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
jupyter-black = "^0.3.4"
flake8 = "^6.1.0"
pytest-randomly = "^3.13.0"
pre-commit = "^3.3.3"

[tool.ruff]
line-length = 79
select = ["F", "E", "W", "I001", "UP"]
ignore-init-module-imports = true
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312"]

[tool.mypy]
warn_unused_ignores = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.optimize.*"
ignore_missing_imports = true
